# esp_ble_hid

./: CMakeLists.txt  bleak_链接断开.py  sdkconfig  sdkconfig.old  uuid_converter.js
main/: CMakeLists.txt  app_main.c
main/ble/: ble_gap.c  ble_gap.h  gatt_services.c  gatt_services.h  hid_param.c  hid_param.h
main/hid/: hid_event.c  hid_event.h  hid_report_map.c  hid_report_map.h  hid_usage.c  hid_usage.h
